--- a/app/views/layouts/order_administration.html.erb
+++ b/app/views/layouts/order_administration.html.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,7 +5,8 @@
   
 </head>
 <body>
- <h1> Flatiron Widgets: Admin </h1>
+ <h1> Flatiron Widgets: Open Orders </h1>
+
 
 <%= yield %>
 
